# CDT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.h
include/dt/: delaunay2d.h
include/geometry/: edge.h  point.h  triangle.h
include/numeric/: numeric.h
include/utils/: Export.h  cdtUtils.h  draw.h
src/dt/: delaunay2d.cpp
src/geometry/: edge.cpp  point.cpp  triangle.cpp
